# feriaapp-api

./: .gitignore  DICCIONARIO_DATOS_FeriaApp_v2.1.md  Dockerfile  README.md  env.example  feriaapp_db_optimization.sql  main.py  migrate_historical_data_v2_1.sql  migrate_v1_to_v2_1.sql  pyproject.toml  render.yaml  requirements.txt  schema.sql  schema_v2_1.sql  setup.sh
api/: main.py
lib/core/: config.py  database.py  security.py
lib/models/: __init__.py  auth.py  eventos.py  productos.py  ventas.py
lib/routers/: auditoria.py  auth.py  auth.py.bak  catalogo.py  eventos.py  health.py  productos.py  sync.py  ventas.py
