[tool.poetry]
name = "feriaapp-api"
version = "2.1.0"
description = "API para FeriaApp v2.1 - Feria Dominical + Re-Vistete + Granja Toqui"
authors = ["Keysign Labs <contacto@keysignlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.34.0"}
asyncpg = "0.30.0"
python-jose = {extras = ["cryptography"], version = "3.4.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pydantic = "2.10.4"
python-multipart = "0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
